--- a/build.gradle
+++ b/build.gradle
@@ -10,18 +10,10 @@ repositories {
     maven {
         url 'https://litarvan.github.io/maven'
     }
-    maven {
-        url 'https://maven.idrsolutions.com'
-        name 'IDR Solutions'
-    }
-    maven {
-        url 'https://jitpack.io'
-        name 'Jitpack'
-    }
 }
 
 dependencies {
     implementation 'fr.flowarg:openlauncherlib:3.2.5'
     implementation 'org.json:json:20220924'
-    implementation 'com.github.Litarvan:Swinger:master-SNAPSHOT'
+    implementation 'fr.theshark34.swinger:swinger:1.0.1-BETA'
 }
