--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     implementation 'fr.flowarg:openlauncherlib:3.2.5'
     implementation 'org.json:json:20220924'
     implementation 'fr.theshark34.swinger:swinger:1.0.1-BETA'
+    implementation 'org.jetbrains:annotations:20.1.0'
 }
